k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: fluxversions
    app.kubernetes.io/name: fluxversions
  name: fluxversions
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
