k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: fluxversions
    app.kubernetes.io/name: fluxversions
    app.kubernetes.io/version: v0.1.0
  name: fluxversions
  namespace: fluxversions
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: fluxversions
      app.kubernetes.io/name: fluxversions
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: fluxversions
        app.kubernetes.io/name: fluxversions
    spec:
      containers:
      - name: fluxversions
        image: jonkerj/versions:latest
        imagePullPolicy: Always
        resources:
          limits: {cpu: 0.25, memory: 256Mi}
          requests: {cpu: 0.25, memory: 32Mi}
        ports:
        - containerPort: 5000
          name: http
      serviceAccountName: fluxversions
