k8s/netpol-flux-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: fluxversions
    app.kubernetes.io/name: fluxversions
  name: allow-fluxversions
  namespace: flux-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: fluxversions
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fluxversions
  podSelector:
    matchLabels:
      app: source-controller
  policyTypes:
  - Ingress
