k8s/netpol-fluxversions.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fluxversions
  namespace: fluxversions
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: fluxversions
      app.kubernetes.io/name: fluxversions
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fluxversions
  namespace: fluxversions
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: fluxversions
      app.kubernetes.io/name: fluxversions
  ingress: []
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: flux-system
      podSelector:
        matchLabels:
          app: source-controller
    ports:
    - protocol: TCP
      port: 9090
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: dns
